# haskell-json-parser

./: README.md  haskell-json-parser.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Json.hs
test/: Spec.hs
